--- a/index.html
+++ b/index.html
@@ -204,6 +204,29 @@
             </div>
           </div>
         </li>
+        
+        <!-- Item 5 -->
+        <li>
+          <div class="direction-l">
+            <div class="flag-wrapper">
+              <span class="flag">Web Development Associate@INNERVE'22</span>
+              <span class="time-wrapper">
+                <!-- <span class="time">2010 - 2012</span> -->
+              </span>
+            </div>
+            <div class="desc">
+              INNERVE is the technical fest of IGDTUW. I handled a team of 5
+              head-coordinators and contributed towards the official website
+              of INNERVE'22.
+              <br />
+              Website for reference:
+              <br />
+              <a href="https://innerve-igdtuw.com/" target="_top">
+                https://innerve-igdtuw.com/
+              </a>
+            </div>
+          </div>
+        </li>
       </ul>
     </div>
 
