--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         
         <!-- Item 5 -->
         <li>
-          <div class="direction-l">
+          <div class="direction-r">
             <div class="flag-wrapper">
               <span class="flag">Web Development Associate@INNERVE'22</span>
               <span class="time-wrapper">
